################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################
[package]
name = "rust_tck"
version = "0.1.0"
edition = "2021"
exclude = [
    "tests/*",
    "tools/*",
    ".devcontainer/*",
    ".vscode/*",
    ".github/*",
    ".gitignore",
]
[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
async-trait = "0.1"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.12"
prost-types = "0.12"
protobuf = { version = "3.3" }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "68c8a1d94f0006daf4ba135c9cbbfddcd793108d" }

#up-rust = { path = "C:/Users/NZMV0D/source/repos/sagarsshah/up-rust/up-rust" }
# async-trait = { version = "0.1" }
# bytes = { version = "1.5" }
# chrono = { version = "0.4" }
# cloudevents-sdk = { version = "0.7" }
# mediatype = "0.19"
 #protobuf = { version = "3.3" }
 base64 = { version = "0.22.0"}
# rand = { version = "0.8" }
# regex = { version = "1.10" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 #uprotocol = "0.1"
# url = { version = "2.5" }
# uuid = { version = "1.7", features = ["v8"] }

# [build-dependencies]
# protobuf-codegen = { version = "3.3" }
# protoc-bin-vendored = { version = "3.0" }
# ureq = { version = "2.9.1", features = ["proxy-from-env"] }

# [dev-dependencies]
# test-case = { version = "3.3" }

#protobuf = { version = "3.3" }
#up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "68c8a1d94f0006daf4ba135c9cbbfddcd793108d" }








